# solar-system

./: .gitignore  CMakeLists.txt  README.md  build.bat
include/: Camera.h  CelestialBody.h  Ring.h  Sphere.h
shaders/: bloom_shader.glsl  blur_shader.glsl  fragment_shader.glsl  ring_fragment.glsl  skybox_fragment.glsl  skybox_vertex.glsl  vertex_shader.glsl
src/: main.cpp  stb_image_impl.cpp
textures/info/: README.md
